natter-api/kubernetes/network/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-network-policy
  namespace: natter-api
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
