natter-api/kubernetes/network/network-policy-link-preview.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-api-network-policy
  namespace: natter-api
spec:
  podSelector:
    matchLabels:
      app: natter-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: natter-api
      ports:
        - protocol: TCP
          port: 4567
  egress:
    - to: {}
