natter-api/kubernetes/network/network-policy-token-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-database-network-policy
  namespace: natter-api
spec:
  podSelector:
    matchLabels:
      app: natter-token-database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: token-service
      ports:
        - protocol: TCP
          port: 9092
