natter-api/kubernetes/network/network-policy-token-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: token-service-network-policy
  namespace: natter-api
spec:
  podSelector:
    matchLabels:
      app: token-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: natter-api
      ports:
        - protocol: TCP
          port: 4567
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: natter-token-database
      ports:
        - protocol: TCP
          port: 9092
